Update Analysis of solar panel data.ipynb

--- a/Analysis of solar panel data.ipynb
+++ b/Analysis of solar panel data.ipynb
@@ -152,8 +152,8 @@
       },
       "source": [
         "To understand more about the interaction between weather and generated power, let's cluster the data\n",
-        "into two groups based on the average sky cover per day for a suitable threshold. Is there a connection \n",
-        "between sky cover and power generation? Does this connection change over the year?"
+        "into two groups based on the average sky cover per day for a suitable threshold to see if there is a connection \n",
+        "between sky cover and power generation, and wether this connection changes over the year."
       ]
     },
     {
